# mcp-for-beginners

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  update-readme.sh
.github/: copilot-instructions.md
.github/chatmodes/: MCPChatPersonalModel.chatmode.md
.github/instructions/: python.instructions.md
CalculadoraMCP/: README.md  requirements.txt
CalculadoraMCP/src/: __init__.py
mcp/: __init__.py  client.py  server.py
mcp_cliente_servidor_local/LLM/: cliente.py  llm.py
mcp_cliente_servidor_local/LLM_dual/: cliente.py  llm.py  server.py
mcp_cliente_servidor_local/LLM_dual_web/: app.py  client.py  llm.py
mcp_cliente_servidor_local/LLM_dual_web/templates/: index.html
mcp_cliente_servidor_local/TestComunication/: cliente.py
mcp_demo/: client.py  server.py  servertmp.py
mcp_server_airtable/: client_MCP_airtable.py  client_MCP_airtable_2.py
mcp_server_api_rest/mcp_server/: main.js  package.json
mcp_server_api_rest/project_api_rest/: index.js  package.json
mcp_server_api_rest/project_api_rest/controllers/: project.js
mcp_server_api_rest/project_api_rest/database/: connection.js
mcp_server_api_rest/project_api_rest/models/: project.js
mcp_server_api_rest/project_api_rest/routes/: project.js
mcp_server_calculadora/: pyproject.toml
mcp_server_calculadora/.aitk/: mcp.json
mcp_server_calculadora/src/: server.py
mcp_server_context/: server.py
mcp_server_conversor_monedas/: main.js  package.json
mcp_server_externo/: client_MCP_airbnb.py
mcp_server_images/: server.py
mcp_server_local/: server.py
mcp_server_route/: server.py  server2.py
mcp_server_ts/: main.js  main.ts  package.json  tsconfig.json
mcp_server_weather/: main.js  package.json  test_server.js
mcp_server_web_search/: server.py
