[project]
name = "mcp-for-beginners"
version = "0.1.0"
description = "Model Context Protocol demonstration package using FastMCP"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "mcp-for-beginners"},
]
keywords = ["mcp", "model-context-protocol", "fastmcp", "demo", "tutorial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "fastmcp>=2.11.3",
    "mcp>=1.13.1",
    "openai>=1.102.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/oscargbocanegra/mcp-for-beginners"
Repository = "https://github.com/oscargbocanegra/mcp-for-beginners.git"
Issues = "https://github.com/oscargbocanegra/mcp-for-beginners/issues"

[project.scripts]
mcp-server = "mcp_demo.server:main"
mcp-client = "mcp_demo.client:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mcp_demo"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_demo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
